--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>Tech Blog</title>
- </head>
- <body>
-  <header>
-  <h1>Tech Blog</h1>
-  <nav>
-  <ul>
-  <li><a href="html.html">HTML</a>
-  <header>
-  <article>
+<head>
+<title> Tech Blog</title>
+</head>
+<body>
+<header>
+<h1> Tech Blog</h1>
+<nav>
+<ul>
+<li><a href="html.html>HTML</a></li>
+</ul>
+</nav>
+</header>
+<article>
+<p>Welcome to my blog</p>
+</article>
+<footer>
+<p>&copy; 2021 Vincent Greene</p>
+</footer>
+</body>
+</html>
+
+
