--- a/html.html
+++ b/html.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Tech Blog</title>
+  <head>
+    <title> Tech Blog</title>
 </head>
 <body>
-<header>
-<h1> Tech Blog</h1>
-<nav>
-<ul>
-<li><a href="html.html>HTML</a></li>
-</ul>
-</nav>
-</header>
-<article>
-  
-<h1>HTML</h1>
-  
-</article>
-<footer>
-<p>&copy; 2021 Vincent Greene</p>
-</footer>
-</body>
+  <header>
+    <h1> Tech Blog</h1>
+    <nav>
+      <ul>
+        <li><a href="html.html>HTML</a></li>
+      </ul>
+     </nav>
+    </header>
+    <article>
+      <p>Welcome to my blog</p>  
+ </article>
+ <footer>
+   <p>&copy; 2021 Jason Martinez</p>
+  </footer>
+ </body>
 </html>
 
 
