--- a/html.html
+++ b/html.html
@@ -13,7 +13,8 @@
      </nav>
     </header>
     <article>
-      <p>Welcome to my blog</p>  
+          <h1>HTML</h1>
+          
  </article>
  <footer>
    <p>&copy; 2021 Jason Martinez</p>
