--- a/html.html
+++ b/html.html
@@ -76,6 +76,15 @@
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       <p> These <strong>semantic group tags</strong>  can be nested in a variety of ways. Whenever using a group tag (<div> or <span>), ask yourself, “Is there a <strong>semantic</strong> tag I could use instead?”</p>
+      
+       <!--- Codepen Snippet --->
+      <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="vYJZEEN" data-user="jasonesmin" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/jasonesmin/pen/vYJZEEN">
+  Untitled</a> by JasonESMIN (<a href="https://codepen.io/jasonesmin">@jasonesmin</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+      
     </article>
     <footer>
     <p>&copy; 2021 Jason Martinez</p>
