--- a/css.html
+++ b/css.html
@@ -101,13 +101,12 @@
       
       <h3>Simple Stack layout</h3>
       
-      <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="YzxxeKG" data-user="jasonesmin" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/jasonesmin/pen/YzxxeKG">
+     <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="oNeeEbx" data-user="jasonesmin" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/jasonesmin/pen/oNeeEbx">
   Untitled</a> by JasonESMIN (<a href="https://codepen.io/jasonesmin">@jasonesmin</a>)
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
- 
            </article>
     <footer>
     <p>&copy; 2021 Jason Martinez</p>
