--- a/css.html
+++ b/css.html
@@ -73,7 +73,7 @@
                 Modifiers can manipulate the block to give a theme or style to a specific component without inflicting changes on a completely unrelated module, they can be denoted with two dashes following the name like .btn--orange.</p>
     </article>
     <footer>
-    <p>&copy; 2021 Mohammed Abdulmahdi</p>
+    <p>&copy; 2021 Jason Martinez</p>
     </footer>
   </body>
 </html>
