--- a/js.html
+++ b/js.html
@@ -45,6 +45,14 @@
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       <p> If statements are used so that if a certain criteria is achieved, for the computer to do something whether that be stopping a program, or starting a new one.</p
    
+      <h2>Simple Simon Says Game</h2>
+        <!--- Codepen Snippet --->
+      <p class="codepen" data-height="300" data-default-tab="js,result" data-slug-hash="xxXrvjq" data-user="jasonesmin" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/jasonesmin/pen/xxXrvjq">
+  simon says simple array game </a> by JasonESMIN (<a href="https://codepen.io/jasonesmin">@jasonesmin</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       
     </article>
     <footer>
